[package]
name = "raijin"
version = "0.1.0"
edition = "2021"
description = "Raijin - simple cli tool to quickly switch between often used directories"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
serde = {version="1.0", features=["derive"]}
serde_yaml = "0.9"
